# case_telecom_brisanet

./: README.md  pyproject.toml
doc/: Tabelas.sql
input/: Informacoes_vendas.csv  base_clientes.csv  base_produtos.csv  base_vendas.csv
load/: load.ipynb
output/: base_clientes_tratada.csv  base_info_vendas_tratada.csv  base_produtos_tratada.csv  base_vendas_tratada.csv
transform/: transform.ipynb
