[project]
name = "case-vendas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.47.0",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.40.0",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "typing>=3.10.0.0",
    "unidecode>=1.4.0",
]
